iRedMail/samples/iptables.rules
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [72:8153]

-A INPUT -p tcp --tcp-flags ALL NONE -j DROP
-A INPUT -p tcp ! --syn -m state --state NEW -j DROP
-A INPUT -p tcp --tcp-flags ALL ALL -j DROP

# Loop device.
-A INPUT -i lo -j ACCEPT

# ssh
-A INPUT -p tcp -m tcp --dport 22 -j ACCEPT

# smtp, submission
-A INPUT -p tcp -m tcp --dport 25 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 587 -j ACCEPT

# imap, imaps
-A INPUT -p tcp -m tcp --dport 143 -j ACCEPT

# mysql
-A INPUT -p tcp -m tcp --dport 3306 -j ACCEPT

# http, https
-A INPUT -p tcp -m tcp --dport 8081 -j ACCEPT

# Keep state.
-A INPUT -m state --state ESTABLISHED,RELATED -j ACCEPT

-A INPUT -j REJECT --reject-with icmp-host-prohibited
-A FORWARD -j REJECT --reject-with icmp-host-prohibited
-P INPUT DROP

COMMIT
